@@ -13,6 +13,7 @@ Changes in 3.0.2 :
 - Fix crash when removing 2 torrents at the same time
 - Show real IP address of peers when using socks proxies
 - Make sure that the current torrent changes when the group is changed of a view
+- Sort and merge block list before writing to level1.dat file
 
 Changes in 3.0.1 :
 - Fix sessionTTL not being able to be bigger then 99
